--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,3 +3,11 @@
   margin: auto;
   width: 60%;
 }
+
+.Dictionary {
+  background: white;
+  padding: 20px;
+  border-radius: 6px;
+  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+  margin: 20px 0;
+}
