--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -15,14 +15,14 @@
 }
 
 .Results h1 {
-  font-family: "BlackMangoVariable";
+  font-family: "BlackMango-Medium";
   font-weight: 500;
   text-transform: capitalize;
   color: #52b3e8;
 }
 
 .Meaning h2 {
-  font-family: "BlackMangoVariable";
+  font-family: "BlackMango-Medium";
   font-weight: 600;
   font-size: 21px;
   text-transform: capitalize;
